   - Added .desktop file (thanks to Fabian Affolter)
   - Added Fabian Affolter to contributors
   - Added Indonesian translation (thanks to Arif E. Nugroho)
   - Bugfix: Race Condition when resetting polling timer (bug was reported
        several times (including #2079358 by Ryan Hayle and Bilal Hawa)
   - Added Bilal Hawa to contributors

Version 2.2.14
 * Robert Sowada
   - Changed version to 2.2.14

Version 2.2.13		2010-02-07 13:56
 * Robert Sowada
   - Changed version to 2.2.13
   - Updated Vietnamese translation (thanks to Clytie Siddall)
   - Updated Dutch translation (thanks to Erwin Poeze)
   - Updated Swedish translation (thanks to Daniel Nylander)
   - Added Indonesian translation (thanks to Arif E. Nugroho)
   - Bugfix: Race Condition when resetting polling timer (bug was reported
        several times (including #2079358 by Ryan Hayle and Bilal Hawa)
   - Added Bilal Hawa to contributors
   - Added Ryan Hayle to contributors
   - Support for IPv6 (backport from 2.3.0 CVS)

Version 2.2.12		2010-01-10 13:21
 * Robert Sowada
   - Changed version to 2.2.12
   - Bugfix: Format string problem
   - Bugfix: Check for libgnomeui added in configure (see support request
        #2805290 by Jleuleu and debian bug #536955 by Lucas Nussbaum)
   - Added .desktop file (thanks to Fabian Affolter)
   - Added Fabian Affolter to contributors
	
Version 2.2.11		2009-04-05 18:14
 * Robert Sowada
   - Changed version to 2.2.11
   - Fixed some gcc 4.3 warnings (thanks to Andre Klitzing for providing a
        patch)
   - Changed some C style casts to C++ style static casts (thanks to Andre
        Klitzing for providing patches)
   - Fixed some gcc 4.3 problems (thanks to ChristenDoc for providing a patch)
   - Bugfix: Only get filtered messages once (thanks to Frederik Vanderstraeten
        for reporting this bug as #2140306)	
   - Added Frederik Vanderstraeten to contributors
	
Version 2.2.10		2008-04-20 11:09
 * Robert Sowada
   - Changed version to 2.2.10